--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
-    "deploy": "gh-pages -d src"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +18,6 @@
     "mongoose": "^6.0.11"
   },
   "devDependencies": {
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.13"
   }
 }
